<?xml version="1.0"?>
<package format="2">
  <name>twizy_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for the Twizy</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ossiane@student.chalmers.se">Ossian Eriksson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/twizy_bringup</url> -->
  <url type="website">https://github.com/OssianEriksson/autonomous-twizy/tree/master/twizy_bringup</url>
  <url type="bugtracker">https://github.com/OssianEriksson/autonomous-twizy/issues</url>
  <url type="repository">https://github.com/OssianEriksson/autonomous-twizy.git</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="ossiane@student.chalmers.se">Ossian Eriksson</author>
  <author email="ekalbin@sstudent.chalmers.se">Albin Ekelund Karlsson</author>
  <author email="enliden96@hotmail.com">Arvid Enliden</author>
  <author email="holvold@student.chalmers.se">Emil Hölvold</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_teleop</depend>
  <depend>ackermann_ekf</depend>
  <depend>twizy_description</depend>
  <depend>rviz</depend>
  <depend>move_base</depend>
  <depend>teb_local_planner</depend>
  <depend>global_planner</depend>
  <depend>realsense2_camera</depend>
  <depend>depth_image_proc</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>twizy_control</depend>
  <depend>rqt_reconfigure</depend>
  <depend>velodyne</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
